--- a/block-BHaacn/index.html
+++ b/block-BHaacn/index.html
@@ -1,21 +1,27 @@
 <!DOCTYPE html>
 <html lang="en">
   <head>
-    <meta charset="UTF-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <meta charset="UTF-8" />
+    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>events 2020 responsive 2</title>
-    <script src="https://kit.fontawesome.com/0b34e5cadc.js" crossorigin="anonymous"></script>
-    <link rel="preconnect" href="https://fonts.googleapis.com">
-    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
-    <link href="https://fonts.googleapis.com/css2?family=Nunito:ital,wght@0,200;0,300;0,400;0,500;0,600;0,700;0,800;1,200&display=swap" rel="stylesheet"> 
-    <link rel="stylesheet" href="assets/stylesheet/style.css">
+    <script
+      src="https://kit.fontawesome.com/0b34e5cadc.js"
+      crossorigin="anonymous"
+    ></script>
+    <link rel="preconnect" href="https://fonts.googleapis.com" />
+    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin />
+    <link
+      href="https://fonts.googleapis.com/css2?family=Nunito:ital,wght@0,200;0,300;0,400;0,500;0,600;0,700;0,800;1,200&display=swap"
+      rel="stylesheet"
+    />
+    <link rel="stylesheet" href="assets/stylesheet/style.css" />
   </head>
   <body>
     <header>
       <section class="back-ground">
         <div class="container flex justify-content padding">
           <div>
-            <a class="brand" href="#">Alt Events</a>
+            <a class="brand" href="#">ALT EVENTS</a>
           </div>
           <div>
             <nav>
@@ -29,15 +35,24 @@
         </div>
         <div class="container flex justify-content padding">
           <div>
-            <h1>Web Developer<br> Conference <span>2020</span></h1>
-            <p class="head-paragraph">Lorem ipsum dolor sit amet consectetur adipisicing elit.
-               Porro veritatis recusandae quis eligendi, optio, repellendus
-                harum repellat molestias animi distinctio ea amet enim molestiae
-                 sapiente eaque, libero dicta ab in.</p>
+            <h1>
+              Web Developer<br />
+              Conference <span>2020</span>
+            </h1>
+            <p class="head-paragraph">
+              Lorem ipsum dolor sit amet consectetur adipisicing elit. Porro
+              veritatis recusandae quis eligendi, optio, repellendus harum
+              repellat molestias animi distinctio ea amet enim molestiae
+              sapiente eaque, libero dicta ab in.
+            </p>
             <a class="register" href="#">Register Now</a>
           </div>
           <div>
-            <img class="hero-img" src="assets/media/hero.png" alt="hero image">
+            <img
+              class="hero-img"
+              src="assets/media/hero.png"
+              alt="hero image"
+            />
           </div>
         </div>
       </section>
@@ -46,14 +61,20 @@
       <section class="about-container">
         <div class="container flex padding">
           <div>
-            <img class="about-img" src="assets/media/about.png" alt="about image">
+            <img
+              class="about-img"
+              src="assets/media/about.png"
+              alt="about image"
+            />
           </div>
           <div class="about-event">
             <h2>ABOUT THE EVENT</h2>
-            <P>Lorem ipsum dolor sit amet consectetur adipisicing elit. 
-              Ab nisi nesciunt blanditiis, eum cum eveniet eligendi aspernatur 
-              illo nulla quo molestiae repudiandae maxime sequi. Ut libero
-               nostrum saepe reprehenderit ratione?</P>
+            <p>
+              Lorem ipsum dolor sit amet consectetur adipisicing elit. Ab nisi
+              nesciunt blanditiis, eum cum eveniet eligendi aspernatur illo
+              nulla quo molestiae repudiandae maxime sequi. Ut libero nostrum
+              saepe reprehenderit ratione?
+            </p>
             <a class="know-more" href="#">Know More</a>
           </div>
         </div>
@@ -62,84 +83,157 @@
         <h3>Why You Should Join</h3>
         <div class="container flex padding justify-content">
           <div class="dotted-box">
-          <div class="number1">1</div>
+            <div class="number1">1</div>
             <dl>
               <dt>Network</dt>
-              <dd class="dotted-dd">Lorem ipsum dolor sit amet consectetur adipisicing elit.
-                 Libero eveniet optio voluptatem, dignissimos vitae molestias
-                  quas excepturi delectus voluptas, quia unde molestiae explicabo
-                   accusamus. Exercitationem laboriosam doloremque possimus eius similique?</dd>
+              <dd class="dotted-dd">
+                Lorem ipsum dolor sit amet consectetur adipisicing elit. Libero
+                eveniet optio voluptatem, dignissimos vitae molestias quas
+                excepturi delectus voluptas, quia unde molestiae explicabo
+                accusamus. Exercitationem laboriosam doloremque possimus eius
+                similique?
+              </dd>
             </dl>
           </div>
           <div class="dotted-box">
-          <div class="number1">2</div>
+            <div class="number1">2</div>
 
             <dl>
               <dt>Great Speakers</dt>
-              <dd class="dotted-dd">Lorem ipsum dolor sit amet consectetur adipisicing elit.
-                 Libero eveniet optio voluptatem, dignissimos vitae molestias
-                  quas excepturi delectus voluptas, quia unde molestiae explicabo
-                   accusamus. Exercitationem laboriosam doloremque possimus eius similique?</dd>
+              <dd class="dotted-dd">
+                Lorem ipsum dolor sit amet consectetur adipisicing elit. Libero
+                eveniet optio voluptatem, dignissimos vitae molestias quas
+                excepturi delectus voluptas, quia unde molestiae explicabo
+                accusamus. Exercitationem laboriosam doloremque possimus eius
+                similique?
+              </dd>
             </dl>
           </div>
           <div class="dotted-box">
-          <div class="number1">3</div>
+            <div class="number1">3</div>
             <dl>
               <dt>Information</dt>
-              <dd class="dotted-dd">Lorem ipsum dolor sit amet consectetur adipisicing elit.
-                 Libero eveniet optio voluptatem, dignissimos vitae molestias
-                  quas excepturi delectus voluptas, quia unde molestiae explicabo
-                   accusamus. Exercitationem laboriosam doloremque possimus eius similique?</dd>
+              <dd class="dotted-dd">
+                Lorem ipsum dolor sit amet consectetur adipisicing elit. Libero
+                eveniet optio voluptatem, dignissimos vitae molestias quas
+                excepturi delectus voluptas, quia unde molestiae explicabo
+                accusamus. Exercitationem laboriosam doloremque possimus eius
+                similique?
+              </dd>
             </dl>
           </div>
         </div>
       </section>
       <section>
-        <h3>Schedule</h3>
-        <article class="article1 padding">
-          <div class="date-container">
-            <div class="sep06">06<br>Sept</div>
-            <div class="dotted-line"></div>
-            <div class="sep07">07<br> Sept</div>
-            <div class="dotted-line"></div>
-            <div class="sep07">08<br> Sept</div>
-            <div class="dotted-line"></div>
-            <div class="sep07">09<br> Sept</div>
-          </div>
-          <div class="img-container">
-            <img class="article-img" src="assets/media/schedule-01.jpg" alt="sch image">
-            <img class="article-img"  src="assets/media/schedule-02.jpg" alt="sch image">
-            <img class="article-img"  src="assets/media/schedule-03.jpg" alt="sch image">
-            <img class="article-img"  src="assets/media/schedule-04.jpg" alt="sch image">
+        <!-- <div>
+          <h3>Schedule</h3>
+        </div> -->
+        <!-- <div class="article1">
+          <div class="sep06">06 <br />Sept</div>
+          <div>
+            <img
+              class="article-img"
+              src="assets/media/schedule-01.jpg"
+              alt="sch image"
+              style="width: 200px"
+            />
           </div>
           <div class="text-container">
             <dl>
               <dt>Digital world event Conversation</dt>
-              <dd>Lorem ipsum dolor sit, amet consectetur adipisicing elit.
-                 Eum dolorum sapiente culpa molestiae. Magni doloribus voluptates
-                  odit ducimus quas natus tempora aspernatur odio numquam quasi. 
-                  Inventore quae sed placeat asperiores.</dd>
+              <dd>
+                Lorem ipsum dolor sit, amet consectetur adipisicing elit. Eum
+                dolorum sapiente culpa molestiae. Magni doloribus voluptates
+                odit ducimus quas natus tempora aspernatur odio numquam quasi.
+                Inventore quae sed placeat asperiores.
+              </dd>
+            </dl>
+          </div>
+        </div>
+        <div></div>
+        <div></div>
+        <div></div>
+        <div></div>
+      </section> -->
+      <section>
+        <h3>Schedule</h3>
+        <article class="article1 padding">
+          <div class="date-container">
+            <div class="sep06">06<br />Sept</div>
+            <div class="dotted-line"></div>
+            <div class="sep07">
+              07<br />
+              Sept
+            </div>
+            <div class="dotted-line"></div>
+            <div class="sep07">
+              08<br />
+              Sept
+            </div>
+            <div class="dotted-line"></div>
+            <div class="sep07">
+              09<br />
+              Sept
+            </div>
+          </div>
+          <div class="img-container">
+            <img
+              class="article-img"
+              src="assets/media/schedule-01.jpg"
+              alt="sch image"
+            />
+            <img
+              class="article-img"
+              src="assets/media/schedule-02.jpg"
+              alt="sch image"
+            />
+            <img
+              class="article-img"
+              src="assets/media/schedule-03.jpg"
+              alt="sch image"
+            />
+            <img
+              class="article-img"
+              src="assets/media/schedule-04.jpg"
+              alt="sch image"
+            />
+          </div>
+          <div class="text-container">
+            <dl>
+              <dt>Digital world event Conversation</dt>
+              <dd>
+                Lorem ipsum dolor sit, amet consectetur adipisicing elit. Eum
+                dolorum sapiente culpa molestiae. Magni doloribus voluptates
+                odit ducimus quas natus tempora aspernatur odio numquam quasi.
+                Inventore quae sed placeat asperiores.
+              </dd>
             </dl>
             <dl>
               <dt>Web Designing Conversation</dt>
-              <dd>Lorem ipsum dolor sit, amet consectetur adipisicing elit.
-                 Eum dolorum sapiente culpa molestiae. Magni doloribus voluptates
-                  odit ducimus quas natus tempora aspernatur odio numquam quasi. 
-                  Inventore quae sed placeat asperiores.</dd>
+              <dd>
+                Lorem ipsum dolor sit, amet consectetur adipisicing elit. Eum
+                dolorum sapiente culpa molestiae. Magni doloribus voluptates
+                odit ducimus quas natus tempora aspernatur odio numquam quasi.
+                Inventore quae sed placeat asperiores.
+              </dd>
             </dl>
             <dl>
               <dt>Web Development Conversation</dt>
-              <dd>Lorem ipsum dolor sit, amet consectetur adipisicing elit.
-                 Eum dolorum sapiente culpa molestiae. Magni doloribus voluptates
-                  odit ducimus quas natus tempora aspernatur odio numquam quasi. 
-                  Inventore quae sed placeat asperiores.</dd>
+              <dd>
+                Lorem ipsum dolor sit, amet consectetur adipisicing elit. Eum
+                dolorum sapiente culpa molestiae. Magni doloribus voluptates
+                odit ducimus quas natus tempora aspernatur odio numquam quasi.
+                Inventore quae sed placeat asperiores.
+              </dd>
             </dl>
             <dl>
               <dt>Digital Marketing Conference</dt>
-              <dd>Lorem ipsum dolor sit, amet consectetur adipisicing elit.
-                 Eum dolorum sapiente culpa molestiae. Magni doloribus voluptates
-                  odit ducimus quas natus tempora aspernatur odio numquam quasi. 
-                  Inventore quae sed placeat asperiores.</dd>
+              <dd>
+                Lorem ipsum dolor sit, amet consectetur adipisicing elit. Eum
+                dolorum sapiente culpa molestiae. Magni doloribus voluptates
+                odit ducimus quas natus tempora aspernatur odio numquam quasi.
+                Inventore quae sed placeat asperiores.
+              </dd>
             </dl>
           </div>
         </article>
@@ -149,7 +243,7 @@
       </section>
       <section class="icon-container flex padding justify-content">
         <div class="outer-red-box">
-          <img src="assets/media/speaker.png">
+          <img src="assets/media/speaker.png" />
           <dl>
             <dt>20+</dt>
             <dd>Great Speakers</dd>
@@ -157,22 +251,22 @@
         </div>
         <div class="red-box">
           <div class="inner-red-box">
-            <img src="assets/media/idea.png">
+            <img src="assets/media/idea.png" />
             <dl>
               <dt>50+</dt>
               <dd>Total Topic</dd>
             </dl>
           </div>
         </div>
-        <div  class="outer-red-box">
-          <img src="assets/media/participants.png">
+        <div class="outer-red-box">
+          <img src="assets/media/participants.png" />
           <dl>
             <dt>300+</dt>
             <dd>participants</dd>
           </dl>
         </div>
-        <div  class="outer-red-box">
-          <img src="assets/media/sponsor.png">
+        <div class="outer-red-box">
+          <img src="assets/media/sponsor.png" />
           <dl>
             <dt>20+</dt>
             <dd>Sponsers</dd>
@@ -181,37 +275,51 @@
       </section>
       <section class="video padding">
         <div>
-           <iframe width="100%" height="315" src="https://www.youtube.com/embed/Qrc2Ei_7bmw" title="YouTube video player" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe>
+          <iframe
+            width="100%"
+            height="315"
+            src="https://www.youtube.com/embed/Qrc2Ei_7bmw"
+            title="YouTube video player"
+            frameborder="0"
+            allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture"
+            allowfullscreen
+          ></iframe>
         </div>
       </section>
       <section class="news-container">
         <h3>Our Latest News</h3>
         <div class="container flex padding justify-content">
           <div class="flex-30">
-            <img src="assets/media/news-01.png" alt="news image">
+            <img src="assets/media/news-01.png" alt="news image" />
             <h4>How to build a great portfolio as a beginner developer</h4>
-            <p>Lorem ipsum dolor, sit amet consectetur adipisicing elit. 
-              Commodi ad at necessitatibus cumque aut eveniet alias,
-               labore repudiandae suscipit. Molestias dolores deleniti 
-               optio voluptatem distinctio ipsam modi repellat, ducimus corporis.</p>
+            <p>
+              Lorem ipsum dolor, sit amet consectetur adipisicing elit. Commodi
+              ad at necessitatibus cumque aut eveniet alias, labore repudiandae
+              suscipit. Molestias dolores deleniti optio voluptatem distinctio
+              ipsam modi repellat, ducimus corporis.
+            </p>
             <a class="read" href="#">Read More</a>
           </div>
           <div class="flex-30">
-            <img src="assets/media/news-02.png" alt="news image">
+            <img src="assets/media/news-02.png" alt="news image" />
             <h4>How to build a great portfolio as a beginner developer</h4>
-            <p>Lorem ipsum dolor, sit amet consectetur adipisicing elit. 
-              Commodi ad at necessitatibus cumque aut eveniet alias,
-               labore repudiandae suscipit. Molestias dolores deleniti 
-               optio voluptatem distinctio ipsam modi repellat, ducimus corporis.</p>
+            <p>
+              Lorem ipsum dolor, sit amet consectetur adipisicing elit. Commodi
+              ad at necessitatibus cumque aut eveniet alias, labore repudiandae
+              suscipit. Molestias dolores deleniti optio voluptatem distinctio
+              ipsam modi repellat, ducimus corporis.
+            </p>
             <a class="read-more" href="#">Read More</a>
           </div>
           <div class="flex-30">
-            <img src="assets/media/news-03.png" alt="news image">
+            <img src="assets/media/news-03.png" alt="news image" />
             <h4>How to build a great portfolio as a beginner developer</h4>
-            <p>Lorem ipsum dolor, sit amet consectetur adipisicing elit. 
-              Commodi ad at necessitatibus cumque aut eveniet alias,
-               labore repudiandae suscipit. Molestias dolores deleniti 
-               optio voluptatem distinctio ipsam modi repellat, ducimus corporis.</p>
+            <p>
+              Lorem ipsum dolor, sit amet consectetur adipisicing elit. Commodi
+              ad at necessitatibus cumque aut eveniet alias, labore repudiandae
+              suscipit. Molestias dolores deleniti optio voluptatem distinctio
+              ipsam modi repellat, ducimus corporis.
+            </p>
             <a class="read" href="#">Read More</a>
           </div>
         </div>
@@ -220,7 +328,11 @@
     <footer>
       <section class="footer1 flex justify-content padding">
         <div>
-          <img class="f-logo" src="assets/media/footer-logo.png" alt="footer logo">
+          <img
+            class="f-logo"
+            src="assets/media/footer-logo.png"
+            alt="footer logo"
+          />
         </div>
         <div>
           <div>
@@ -251,6 +363,5 @@
         </div>
       </section>
     </footer>
-    
   </body>
 </html>
